user activation feature implemented
