# cmd/api/auth.go
@@ -14,6 +14,11 @@ type RegisterUserPayload struct {
 	Password string `json:"password" validate:"required,min=3,max=72"`
 }
 
+type UserWithToken struct {
+	*store.User
+	Token string `json:"token"`
+}
+
 // registerUserHandler godoc
 //
 //	@Summary		Registers a user
@@ -67,12 +72,13 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 			return
 		}
 	}
-	if err != nil {
-		app.internalServerError(w, r, err)
-		return
+
+	userWithToken := UserWithToken{
+		User:  user,
+		Token: plainToken,
 	}
 
-	if err := app.jsonResponse(w, http.StatusCreated, nil); err != nil {
+	if err := app.jsonResponse(w, http.StatusCreated, userWithToken); err != nil {
 		app.internalServerError(w, r, err)
 		return
 	}
